# AI-Mastery-2026

./: $null  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_IMPLEMENTATION_PLAN.md  ARCHITECTURE_ANALYSIS_COMPLETE.md  CAPSTONE_PROJECT_ARABIC_RAG.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMIT_PLAN.md  COMMIT_SCRIPT_README.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETE_LLM_COURSE_ARCHITECTURE.md  COMPLETE_LLM_ENGINEERING_TUTORIAL.md  COMPLETION_PLAN.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DATABASE_ARCHITECTURE_INDEX.md  DATABASE_CASE_STUDIES_COMPILATION.md  DATABASE_DOCUMENTATION_SUMMARY.md  DOCUMENTATION_PLAN.md  Dockerfile  Dockerfile.capstone  Dockerfile.streamlit  EDUCATIONAL_PROGRAM_COMPLETE_SUMMARY.md  EXECUTIVE_SUMMARY.md  FINAL_ARCHITECTURE_SUMMARY.md  GEMINI.md  GIT_COMMIT_SUMMARY.md  IMPLEMENTATION_QUICK_REFERENCE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS.md  INTERVIEW_TRACKER.md  LICENSE  LLM_Arabic_plan.md  LLM_COURSE_IMPLEMENTATION_ARCHITECTURE.md  LLM_COURSE_IMPLEMENTATION_COMPLETE.md  (+47 more)
arabic-llm/: ALL_DOCUMENTATION_FILES.md  ARCHITECTURE_REVIEW.md  COMPLETE_DOCUMENTATION_INDEX.md  IMPROVED_STRUCTURE.md  Makefile  PROJECT_COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  migrate_to_v3.py  prepare.py  prepare_data.py  program.md  pyproject.toml  requirements.txt  train_model.py
arabic-llm/arabic_llm/: __init__.py
arabic-llm/arabic_llm/agents/: __init__.py  data_collector.py  evaluator.py  researcher.py  tracker.py
arabic-llm/arabic_llm/core/: __init__.py  book_processor.py  dataset_generator.py  schema.py  schema_enhanced.py  templates.py  templates_extended.py
arabic-llm/arabic_llm/integration/: __init__.py  databases.py  system_books.py
arabic-llm/arabic_llm/models/: __init__.py  checkpoints.py  quantization.py
arabic-llm/arabic_llm/pipeline/: __init__.py  cleaning.py  deduplication.py
arabic-llm/arabic_llm/utils/: __init__.py  arabic.py  io.py  text.py
arabic-llm/configs/: data_config.yaml  training_config.yaml
arabic-llm/docs/: COMPLETE_DOCUMENTATION.md  dataset_analysis.md  system_book_integration.md
arabic-llm/docs/architecture/: STRUCTURE_SUMMARY.md  final_status.md
arabic-llm/docs/archive/: autoresearch.md  enhanced_roles.md  implementation.md  lines_8000_9866.md  lines_9800_11993.md
arabic-llm/docs/guides/: COMPLETE_IMPLEMENTATION_ROADMAP.md  FINAL_ACTION_PLAN.md  IMPLEMENTATION_PLAN.md  PLAN_IMPLEMENTATION_STATUS.md  USER_GUIDE.md  llm_arabic_plan.md  plan.md
arabic-llm/docs/implementation/: data_updates.md  data_utilization.md
arabic-llm/docs/improvements/: AUTORESEARCH_IMPROVEMENTS.md  CRITICAL_ISSUES.md  IMPROVEMENTS_STATUS.md  MIGRATION_COMPLETE.md
arabic-llm/docs/reference/: VERIFICATION_REPORT.md
arabic-llm/docs/summaries/: FINAL_SUMMARY.md  MASTER_SUMMARY_V3.md  implementation_status.md
arabic-llm/scripts/: 01_process_books.py  02_generate_dataset.py  analysis.py  audit_datasets.py  complete_data_audit.py  complete_pipeline.py  integrate_datasets.py  merge_all_datasets.py  prepare.py  process_sanadset.py  refine_balygh_sft_with_llm.py  run_complete_pipeline.py  train.py
arabic-llm/src/: __init__.py  data_cleaning_pipeline.py  system_book_integration.py
arabic-llm/tests/: test_arabic_utils.py
sprints/rag_engine/rag-engine-mini/: .env.example  .env.prod.example  COMPLETE_ARCHITECTURE.md  COMPLETION_SUMMARY.md  DEPLOYMENT_OUTPUT.txt  Dockerfile  EXECUTION_COMPLETE.md  EXECUTION_SUMMARY.md  FINAL_EXECUTION_SUMMARY.md  IMPLEMENTATION_PRIORITY_MATRIX.md  MANUAL_DEPLOYMENT.txt  Makefile  PROJECT_COMPLETE_SUMMARY.md  README.md  ROADMAP_COMPLETE_PRODUCTION.md  SESSION_SUMMARY.md  STRUCTURE.md  docker-compose.prod.yml  notebooks_execution_report.txt  pyproject.toml  requirements.txt
sprints/rag_engine/rag-engine-mini/config/kubernetes/: config.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml
sprints/rag_engine/rag-engine-mini/config/prometheus/: alerts.yml
sprints/rag_engine/rag-engine-mini/deployment_demo_20260201_170228/: docker-compose.yml
sprints/rag_engine/rag-engine-mini/docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
sprints/rag_engine/rag-engine-mini/docs/: AI_ENGINEERING_CURRICULUM.md  COMPREHENSIVE_GUIDE.md  FAQ.md  IMPLEMENTATION_GUIDE.md  MASTERY_JOURNEY.md  README.md  ROADMAP.md  VISUAL_GUIDE.md  configuration.md  deployment.md  learning-map.md  modules.md  prompt-engineering.md
sprints/rag_engine/rag-engine-mini/docs/adr/: 001-postgres-fts-vs-elasticsearch.md  002-rrf-vs-weighted-fusion.md  004-minimal-vector-payload.md  005-chunk-dedup-design.md
sprints/rag_engine/rag-engine-mini/frontend/: package.json  tailwind.config.js
sprints/rag_engine/rag-engine-mini/notebooks/: 01_intro_and_setup.ipynb  02_end_to_end_rag.ipynb  03_hybrid_search_and_rerank.ipynb  04_evaluation_and_monitoring.ipynb  05_agentic_and_graph_rag.ipynb  06_multimodal_unstructured.ipynb  07_autonomous_routing_and_web.ipynb  08_llm_provider_strategy.ipynb  09_semantic_chunking.ipynb  10_vector_visualization.ipynb  11_agentic_rag_workflows.ipynb  12_synthetic_data_flywheel.ipynb  13_agentic_graph_rag_mastery.ipynb  14_multi_agent_swarm_orchestration.ipynb  15_adversarial_ai_red_teaming.ipynb  16_long_term_memory_and_personalization.ipynb  17_slm_quantization_mastery.ipynb  18_raft_fine_tuning_mastery.ipynb  19_multimodal_rag_vision_mastery.ipynb  20_reasoning_models_thinking_loops.ipynb  21_synthetic_data_distillation_mastery.ipynb  22_document_ingestion_processing.ipynb  23_evaluation_monitoring_rag.ipynb  24_advanced_rag_optimization.ipynb  25_architecture_design_patterns.ipynb  90_evaluation_basics.ipynb  91_recall_precision_tradeoff.ipynb  92_rerank_gain_analysis.ipynb  E2E_IMPLEMENTATION_WALKTHROUGH.ipynb  export_functionality_demo.ipynb  multi_layer_cache_demo.ipynb
sprints/rag_engine/rag-engine-mini/scripts/: check_prod_readiness.py  evaluate_ragas.py  frontend_demo.py  query_optimization.py  seed_user.py  smoke_test.py
sprints/rag_engine/rag-engine-mini/src/: main.py
(+2456 files in other folders)
