[project]
name = "arabic-llm"
version = "1.0.0"
description = "Arabic LLM Engineering Mastery - Autonomous Fine-tuning System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Arabic LLM Project Team"}
]

dependencies = [
    # Core ML
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    
    # Transformers
    "transformers>=4.36.0",
    "datasets>=2.14.0",
    "tokenizers>=0.15.0",
    "accelerate>=0.25.0",
    
    # Quantization
    "bitsandbytes>=0.41.0",
    
    # PEFT (LoRA)
    "peft>=0.7.0",
    
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "chardet>=5.2.0",
    "regex>=2023.0.0",
    
    # Database
    "sqlite3",
    
    # Utilities
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    
    # Evaluation
    "scikit-learn>=1.3.0",
    "sacrebleu>=2.3.0",
    
    # Development
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.scripts]
arabic-llm-audit = "arabic_llm.scripts.audit_datasets:main"
arabic-llm-clean = "arabic_llm.src.data_cleaning_pipeline:main"
arabic-llm-generate = "arabic_llm.scripts.generate_dataset:main"
arabic-llm-train = "arabic_llm.train:train"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["arabic_llm*", "rag_system*"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
